assets/style1.css
body{
    font-family: 'Poppins', sans-serif!important;
}
.top-section{
    padding-top: 10px;
    padding-bottom: 5px;
    padding-left: 60px;
    padding-right: 60px;
}
.top-bar{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    border-bottom: 1px solid #d1d1d1;
    padding-bottom: 5px;
}
#top-text{
    color: #6f6f6f;
}
a{
    text-decoration: none;
    color: #060606!important;
}
a:hover{
    color: #ff0000!important;
    transition: 0.5s!important;
}
.menubar{
    background-color: #ffffff;
    padding-left: 70px;
    padding-right: 70px;
}
ul{
    list-style: none;
}
li{
    display: inline;
    padding-left: 5px;
}
.container-fluid{
    --bs-gutter-x: 0rem;
}
.banner-img{
    background-image: url('../assets/seller-banner.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 500px;
}
.banner{
    padding-top: 120px;
    padding-bottom: 120px;
}
h4{
    padding-top: -90px;
    font-size: 20px;
    font-weight: 700;
    color: #000000;
}

